force-app/main/default/objects/Backup__c/Backup__c.object-meta.xml
<CustomObject>
    <label>Backup</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Backup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>