force-app/main/default/objects/Backup__c/fields/Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Address_Verified__c</fullName>
    <formula>Address__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the address.</inlineHelpText>
    <label>Verified(Filled address)</label>
    <type>Checkbox</type>
</CustomField>