force-app/main/default/objects/Backup__c/fields/Contact_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contact_Verified__c</fullName>
    <formula>Home_Phone__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the home phone value.</inlineHelpText>
    <label>Verified(Filled home phone)</label>
    <type>Checkbox</type>
</CustomField>