force-app/main/default/objects/Backup__c/fields/Description_of_Home_and_Neightborhood__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Home_and_Neightborhood__c</fullName>
    <label>Description of Home and Neightborhood</label>
    <type>TextArea</type>
</CustomField>