force-app/main/default/objects/Backup__c/fields/Ext_0__c.field-meta.xml
<CustomField>
    <fullName>Ext_0__c</fullName>
    <label>Ext</label>
    <type>Phone</type>
</CustomField>