force-app/main/default/objects/Backup__c/fields/Name_Verified__c.field-meta.xml
<CustomField>
    <fullName>Name_Verified__c</fullName>
    <formula>NOT(ISBLANK(TEXT( Relationship__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the relationship.</inlineHelpText>
    <label>Verified(Filled relationship)</label>
    <type>Checkbox</type>
</CustomField>