force-app/main/default/objects/Backup__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Facility Staff</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Great Grandson (Maternal)</fullName>
            </value>
            <value>
                <fullName>Great Grandson (Paternal)</fullName>
            </value>
            <value>
                <fullName>Great Granddaughter (Maternal)</fullName>
            </value>
            <value>
                <fullName>Great Granddaughter (Paternal)</fullName>
            </value>
            <value>
                <fullName>Step Grandson (Maternal)</fullName>
            </value>
            <value>
                <fullName>Step Grandson (Paternal)</fullName>
            </value>
            <value>
                <fullName>Step Granddaughter (Maternal)</fullName>
            </value>
            <value>
                <fullName>Step Granddaughter (Paternal)</fullName>
            </value>
            <value>
                <fullName>Aunt (Maternal)</fullName>
            </value>
            <value>
                <fullName>Aunt (Paternal)</fullName>
            </value>
            <value>
                <fullName>Brother (Half)</fullName>
            </value>
            <value>
                <fullName>Brother (Step)</fullName>
            </value>
            <value>
                <fullName>Brother(Biological)</fullName>
            </value>
            <value>
                <fullName>Brother(Legal)</fullName>
            </value>
            <value>
                <fullName>Cousin (Maternal)</fullName>
            </value>
            <value>
                <fullName>Cousin (Paternal)</fullName>
            </value>
            <value>
                <fullName>Custodian (Legal)</fullName>
            </value>
            <value>
                <fullName>Daughter (Alleged)</fullName>
            </value>
            <value>
                <fullName>Daughter (Biological)</fullName>
            </value>
            <value>
                <fullName>Daughter (Foster)</fullName>
            </value>
            <value>
                <fullName>Daughter (Legal)</fullName>
            </value>
            <value>
                <fullName>Daughter (Step)</fullName>
            </value>
            <value>
                <fullName>Father (Biological)</fullName>
            </value>
            <value>
                <fullName>Father (Foster)</fullName>
            </value>
            <value>
                <fullName>Father (Legal)</fullName>
            </value>
            <value>
                <fullName>Father (Putative)</fullName>
            </value>
            <value>
                <fullName>Father (Step)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>