force-app/main/default/objects/Backup__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>Description_of_Home_and_Neightborhood__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the description of home and neighborhood.</inlineHelpText>
    <label>Verified(Filled description&amp;neighbor)</label>
    <type>Checkbox</type>
</CustomField>